[project]
name = "zibai-server"
version = "0.4.0"
description = "A modern Python WSGI server."
authors = [
    {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
    "h11>=0.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
repository = "https://github.com/abersheeran/zibai"

[project.optional-dependencies]
gevent = [
    "gevent>=23.9.1",
]
reload = [
    "watchdog>=3.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
benchmark = [
    "waitress>=2.1.2",
    "gunicorn>=21.2.0",
]
